--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
             <li><a href="" class="header-list">Контакты</a></li>
         </ul>
     <ul class="nav-contacts">
-        <li><a href="mailto:info@devstudio.com" class="header-contact">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="header-contact">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="header-contact">
+            <svg class="envelope" width="16px" height="12px">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+            </svg>info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="header-contact">
+            <svg class="smartphone" width="10px" height="16px">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            </svg>+38 096 111 11 11</a></li>
     </ul>
     </nav>
     </div>
