--- a/index.html
+++ b/index.html
@@ -50,18 +50,40 @@
     <h2 class="visually-hidden">Наши преимущества</h2>
     <ul class="features-list">
         <li>
+            <div class="icon-wrapper">
+            <svg class="features-icon">
+                <use href="./images/symbol-defs.svg#icon-antenna"></use>
+            </svg> </div>
             <h3 class="features-title">Внимание к деталям</h3>
             <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
         <li>
+            <div class="icon-wrapper">
+                <svg class="features-icon">
+                <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+
+            </div>
             <h3 class="features-title">Пунктуальность</h3>
             <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
-        <li>
+        <li> 
+            <div class="icon-wrapper">
+                <svg class="features-icon">
+                <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+
+            </div>
             <h3 class="features-title">Планирование</h3>
             <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
-        <li>
+        <li> 
+            <div class="icon-wrapper">
+                <svg class="features-icon">
+                <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+
+            </div>
             <h3 class="features-title">Современные технологии</h3>
             <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
