--- a/index.html
+++ b/index.html
@@ -109,7 +109,37 @@
         <li class="item">
             <img src="./images/img-4.jpg" alt="Портрет дизайнера" width="270">
             <h3 class="team-name">Игорь Демьяненко</h3>
-            <p class="team-text" lang="en">Product Designer</p> 
+            <p class="team-text" lang="en">Product Designer</p>
+            <ul class="team-icons">
+                <li>
+                    <a href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul> 
         </li>
         <li class="item">
             <img src="./images/img-5.jpg" alt="Портрет разработчика" width="270">
