--- a/index.html
+++ b/index.html
@@ -112,28 +112,28 @@
             <p class="team-text" lang="en">Product Designer</p>
             <ul class="team-icons">
                 <li>
-                    <a href="#">
+                    <a class="link-icon" href="#">
                         <svg class="soc-icon" width="20px" height="20px">
                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a class="link-icon" href="#">
                         <svg class="soc-icon" width="20px" height="20px">
                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a class="link-icon" href="#">
                         <svg class="soc-icon" width="20px" height="20px">
                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a class="link-icon" href="#">
                         <svg class="soc-icon" width="20px" height="20px">
                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                         </svg>
@@ -145,15 +145,105 @@
             <img src="./images/img-5.jpg" alt="Портрет разработчика" width="270">
             <h3 class="team-name">Ольга Репина</h3>
             <p class="team-text" lang="en">Frontend Developer</p>
+            <ul class="team-icons">
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </li>
         <li class="item"><img src="./images/img-6.jpg" alt="Портрет маркетолога" width="270">
             <h3 class="team-name">Николай Тарасов</h3>
             <p class="team-text" lang="en">Marketing</p>
+            <ul class="team-icons">
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </li>
         <li class="item">
             <img src="./images/img-7.jpg" alt="Портрет дизайнера" width="270">
             <h3 class="team-name">Михаил Ермаков</h3>
             <p class="team-text" lang="en">UI Designer</p>
+            <ul class="team-icons">
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="link-icon" href="#">
+                        <svg class="soc-icon" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </li>
     </ul>
     </div>
