--- a/index.html
+++ b/index.html
@@ -248,6 +248,57 @@
     </ul>
     </div>
 </section>
+<!-- Партнеры -->
+<section class="partners">
+    <div class="container">
+        <h2 class="partners-title">Постоянные клиенты</h2>
+        <ul class="partners-logo">
+            <li> 
+                <a class="partners-link" href="#">
+                    <svg width="44px" height="50px">
+                        <use href="./images/symbol-defs.svg#icon-logo-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                    <a class="partners-link" href="#">
+                        <svg width="40px" height="52px">
+                            <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+                        </svg>
+                    </a>
+            </li>
+            <li>
+                    <a class="partners-link" href="#">
+                        <svg width="41px" height="43px">
+                            <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+                        </svg>
+                    </a>
+            </li>
+            <li>
+                    <a class="partners-link" href="#">
+                        <svg width="80px" height="42px">
+                            <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+                        </svg>
+                    </a>
+            </li>
+            <li>
+                    <a class="partners-link" href="#">
+                        <svg width="59px" height="47px">
+                            <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+                        </svg>
+                    </a>
+            </li>
+            <li>
+                    <a class="partners-link" href="#">
+                        <svg width="88px" height="45px">
+                            <use href="./images/symbol-defs.svg#icon-logo-6"></use>
+                        </svg>
+                    </a>
+            </li>
+
+        </ul>
+    </div>
+</section>
 </main>
 <!-- подвал -->
 <footer class="footer">
