--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
 <!-- подвал -->
 <footer class="footer">
     <div class="container">
+        <div class="footer-cnt">
         <div class="footer-wrapper">
     <a href="./index.html" class="footer-logo"><span class="web">Web</span>Studio</a>
     <address>
@@ -313,6 +314,40 @@
        </ul>
     </address>
     </div>
+    <div class="footer-soc">
+        <h2>Присоединяйтесь</h2>
+        <ul class="soc-list">
+            <li>
+                <a href="#">
+                <svg class="footer-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                <svg class="footer-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                <svg class="footer-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                <svg class="footer-icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
     </div>
 </footer>
 
