--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,14 @@
                 <li><a href="" class="header-list">Контакты</a></li>
             </ul>
             <ul class="nav-contacts">
-                <li><a href="mailto:info@devstudio.com" class="header-contact">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="header-contact">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="header-contact">
+                        <svg class="envelope" width="16px" height="12px">
+                            <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="header-contact">
+                        <svg class="smartphone" width="10px" height="16px">
+                            <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11</a></li>
             </ul>
         </nav>
     </div>
@@ -120,15 +126,50 @@
     <!-- Футер -->
 <footer class="footer">
     <div class="container">
-        <div class="footer-wrapper">
-            <a href="./index.html" class="footer-logo"><span class="web">Web</span>Studio</a>
-            <address>
-                <ul class="footer-list">
-                    <li class="footer-adr">г. Киев, пр-т Леси Украинки, 26</li>
-                    <li><a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <div class="footer-cnt">
+            <div class="footer-wrapper">
+                <a href="./index.html" class="footer-logo"><span class="web">Web</span>Studio</a>
+                <address>
+                    <ul class="footer-list">
+                        <li class="footer-adr">г. Киев, пр-т Леси Украинки, 26</li>
+                        <li><a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-soc">
+                <h2>Присоединяйтесь</h2>
+                <ul class="soc-list">
+                    <li>
+                        <a href="#">
+                            <svg class="footer-icon" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg class="footer-icon" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg class="footer-icon" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg class="footer-icon" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </div>
 </footer>
